--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -33,9 +33,6 @@
   align-items: center;
 }
 
-.navigation-div img{
-  width: 5%;
-}
 
 .navigation ul{
   display: flex;
@@ -70,28 +67,25 @@
 
 
 .logo-image{
-  width: 3%;
-  margin: 5px auto 5px 15px;
+  width: 10%;
+  margin: 5px auto 5px 30px;
 }
 
 @media(max-width:991px){
   .logo-image{
-    width: 5%;
-    margin: 5px auto 5px 15px;
+    width: 15%;
   }
 }
 
 @media(max-width:768px){
   .logo-image{
-    width: 8%;
-    margin: 5px auto 5px 15px;
+    width: 20%;
   }
 }
 
 @media(max-width:567px){
   .logo-image{
-    width: 10%;
-    margin: 5px auto 5px 15px;
+    width: 30%;
   }
 }
 
@@ -1069,6 +1063,20 @@ p:nth-of-type(2) {
   margin-top: 40px;
   padding: 30px 0px;
   background: #482aff;
+}
+
+.footer-section
+.col-md-12{
+  text-align: center;
+  padding: 30px;
+}
+
+.footer-section
+.col-md-12 p{
+  color: white;
+  font-weight: bold;
+  font-size: 22px;
+  font-family: "Nunito";
 }
 
 .ul-box p{
