--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -21,7 +21,7 @@
 .nav-section{
   position: sticky;
   top: 0px;
-  z-index: 10;
+  z-index: 100;
   background-color: #482aff;
   box-shadow: 0 5px 5px rgb(5 25 114 / 40%);
   padding: 10px 0px;
@@ -38,6 +38,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 0rem;
+  margin-right: 50px;
 }
 
 .navigation ul li{
@@ -46,17 +47,9 @@
   text-decoration: unset;
   color: #fff;
   font-size: 15px;
-  font-family: Nunito;
-  font-size: 1.5rem;
-}
-
-.navigation ul li{
-  color: white;
-  text-decoration: none;
-  margin-right: 100px;
-  font-size: 30px;
-  font-weight: bold;
   font-family: "Nunito";
+  cursor: pointer;
+  font-size: 2rem;
 }
 
 @media(max-width:768px){
@@ -67,13 +60,19 @@
 
 
 .logo-image{
-  width: 5%;
+  width: 3%;
   margin: 5px 0px 5px 30px;
 }
 
 .metatesk-image{
-  width: 10%;
+  width: 13%;
   margin: auto auto auto 40px;
+}
+
+@media(max-width:1119px){
+  .logo-image{
+    width: 5%;
+  }
 }
 
 @media(max-width:991px){
@@ -81,7 +80,7 @@
     width: 10%;
   }
   .metatesk-image{
-    width: 15%;
+    width: 22%;
   }
 }
 
@@ -90,13 +89,27 @@
     width: 10%;
   }
   .metatesk-image{
-    width: 20%;
+    width: 28%;
   }
 }
 
 @media(max-width:567px){
   .logo-image{
-    width: 15%;
+    width: 10%;
+  }
+  .metatesk-image{
+    width: 28%;
+    margin: auto auto auto 20px;
+  }
+}
+
+@media(max-width:400px){
+  .logo-image{
+    width: 12%;
+  }
+  .metatesk-image{
+    width: 23%;
+    margin: auto auto auto 20px;
   }
 }
 
