--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -1734,7 +1734,7 @@ p:nth-of-type(4)  {
 @media (max-width: 991px){
 .video-js .vjs-big-play-button {
     height: 220px!important;
-    top: 10px!important;
+    top: 45px!important;
     margin-top: -0.9em!important;
 }
 }
@@ -1760,8 +1760,8 @@ p:nth-of-type(4)  {
 
 @media(max-width:991px) {
   .add-section-four .video-box> div{
-    width: 300px;
-    height: 180px;
+    width: 380px;
+    height: 250px;
   }
 }
 
@@ -1773,13 +1773,7 @@ p:nth-of-type(4)  {
 
 @media(max-width:450px) {
   .add-section-four .video-box> div{
-    height: 180px;
-  }
-}
-
-@media(max-width:400px) {
-  .add-section-four .video-box> div{
-    height: 200px;
+    width:100%;
   }
 }
 
