--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -1146,14 +1146,24 @@ p:nth-of-type(2) {
 
 .footer-section{
   margin-top: 40px;
-  padding: 30px 0px;
+  padding: 20px 0px;
   background: #482aff;
 }
 
 .footer-section
 .col-md-12{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   padding: 30px;
+}
+
+.footer-section
+.col-md-12 img{
+  width: 15%;
+  margin: 15px auto;
 }
 
 .footer-section
