--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -1166,6 +1166,20 @@ p:nth-of-type(2) {
   margin: 15px auto;
 }
 
+@media(max-width:991px){
+  .footer-section
+  .col-md-12 img{
+    width: 30%;
+  }
+}
+
+@media(max-width:567px){
+  .footer-section
+  .col-md-12 img{
+    width: 50%;
+  }
+}
+
 .footer-section
 .col-md-12 p{
   color: white;
