--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -1162,21 +1162,21 @@ p:nth-of-type(2) {
 
 .footer-section
 .col-md-12 img{
-  width: 15%;
+  width: 25%;
   margin: 15px auto;
 }
 
 @media(max-width:991px){
   .footer-section
   .col-md-12 img{
-    width: 30%;
+    width: 35%;
   }
 }
 
 @media(max-width:567px){
   .footer-section
   .col-md-12 img{
-    width: 50%;
+    width: 55%;
   }
 }
 
@@ -1184,7 +1184,7 @@ p:nth-of-type(2) {
 .col-md-12 p{
   color: white;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 15px;
   font-family: "Calibri light";
 }
 
@@ -1436,6 +1436,11 @@ form {
 .css-1s2u09g-control{
   border: none ;
   border-radius: 100px;
+}
+
+.metattesk-contact
+.css-1pahdxg-control{
+  border: none;
 }
 
 
@@ -1837,6 +1842,11 @@ p:nth-of-type(4)  {
   border-top: 5px solid #482AFF;
 } 
 
+@media(max-width:768px){
+  .add-section-five{
+    margin: 70px auto 30px auto;
+  }
+}
 
 
 .add-section-five .col-md-12 h3{
