--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -1,4 +1,4 @@
-/* nac section */
+/* nav section first */
 @font-face {
   font-family: "Calibri Light";
   font-style: normal;
@@ -15,7 +15,28 @@
   src: local('Nunito Medium'), url('./font/Nunito-Medium.ttf') format('ttf');
 }
 
+.general-section  svg{
+  fill: white;
+  width: 20px;
+}
 
+.navigation-div-first
+.navigation ul li:nth-last-of-type(4) a span {
+  margin: 0px 0px 0px 10px ;
+}
+
+
+.navigation-div-first
+.navigation ul button{
+  border: none;
+  height: 40px;
+  width: 70px;
+  border-radius: 30px;
+  color: #482AFF;
+  font-family: "Calibri Light";
+  font-size: large;
+  margin:auto -11% auto 2%;
+}
 
 
 .nav-section{
@@ -24,16 +45,16 @@
   z-index: 100;
   background-color: #482aff;
   box-shadow: 0 5px 5px rgb(5 25 114 / 40%);
-  padding: 10px 0px;
+  padding: 5px 0px;
 }
 
-.navigation-div{
+.general-section{
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.navigation-div a{
+.general-section a{
   width:200px;
   height: 100%;
 }
@@ -45,22 +66,25 @@
 }
 
 
-.navigation-div ul{
+.general-section ul{
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-bottom: 0rem;
   margin-right: 50px;
 }
 
-.responsive-navigation ul{
-  display: block;
-  margin: 80px auto auto 50px;
-  padding-left: 0px;
+@media(max-width:991px){
+  .general-section ul{
+    display: none;
+  }
 }
 
-.navigation-div ul li{
+
+
+.general-section ul li{
   list-style: none;
-  margin: 10px;
+  margin: 5px 10px;
   text-decoration: unset;
   color: #fff;
   font-size: 15px;
@@ -69,77 +93,68 @@
   font-size: 2rem;
 }
 
-.navigation-div ul li a{
+
+.general-section ul li a{
   list-style: none;
-  margin: 10px;
+  margin: 0px 10px;
   text-decoration: unset;
   color: #fff;
   font-size: 15px;
   font-family: "Nunito";
   cursor: pointer;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 
 
 @media(max-width:768px){
-  .navigation-div ul li{
+  .general-section ul li{
     margin-right: 50px;
   }
 }
 
 
 .logo-image{
-  width: 3%;
+  display: block;
+  width: 100% !important;
   margin: 5px 0px 5px 30px;
+  cursor: pointer;
+}
+
+.navigation-div-first > a{
+  width: 50px;
+  height: auto;
 }
 
 .metatesk-image{
-  width: 13%;
+  width: 15%;
   margin: auto auto auto 40px;
 }
 
-@media(max-width:1119px){
-  .logo-image{
-    width: 5%;
-  }
-}
 
 @media(max-width:991px){
-  .logo-image{
-    width: 10%;
-  }
   .metatesk-image{
     width: 22%;
   }
 }
 
 @media(max-width:768px){
-  .logo-image{
-    width: 10%;
-  }
   .metatesk-image{
     width: 28%;
   }
 }
 
 @media(max-width:567px){
-  .logo-image{
-    width: 10%;
-  }
   .metatesk-image{
     width: 28%;
-    margin: auto auto auto 20px;
+    margin: auto auto auto 10%;
   }
 }
 
 @media(max-width:400px){
-  .logo-image{
-    width: 12%;
-  }
   .metatesk-image{
-    width: 23%;
-    margin: auto auto auto 20px;
+    width: 40%;
+    /* margin: auto auto auto 20px; */
   }
 }
 
@@ -156,10 +171,9 @@
   display: none;
 }
 
-@media(max-width:768px){
+@media(max-width:991px){
   .open-burger{
     display: block;
-    margin: auto 50px;
     padding: 6px 10px;
     background-color: unset;
     color: #fff;
@@ -170,6 +184,136 @@
   .responsive-navigation 
   .open-burger{
     margin: 20px auto auto 0px;
+  }
+}
+/* nav section second */
+
+.navigation-div-second{
+  display: flex;
+}
+
+.navigation-div-second ul li a {
+  font-family: "Calibri Light";
+}
+
+.navigation-div-second .navigation{
+  margin: auto 2% auto auto;
+}
+
+/* responsive */
+
+
+@media(min-width:991px){
+  .navigation-div-second
+  .menu-div{
+    display: none;
+  }
+}
+
+
+@media(max-width:991px){
+  .navigation-div-second 
+  .navigation{
+    margin: auto;
+  } 
+  .navigation-div-second{
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    border: 1px solid;
+    background-color: #482AFF;
+    height: 70px;
+    width: 100%;
+  }
+
+  .navigation-div-second
+  .menu-div{
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
+  .navigation-div-second 
+  .menu-div
+  .navigation{
+    display: none;
+  }
+
+  .navigation-div-second 
+  .menu-div
+  .icon{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 15%;
+    height: 100%;
+  }
+
+  .navigation-div-second 
+  .menu-div
+  .icon span{
+    display: block;
+    width: 30%;
+  }
+
+  .navigation-div-second 
+  .menu-div
+  .icon span svg{
+    fill: #fff;
+  }
+
+  .navigation-div-second 
+  .menu-div
+  .icon a{
+    color: white !important;
+    font-size: larger;
+    text-decoration: none;
+    height: auto;
+    width: auto;
+  }
+
+
+  .navigation-div-second 
+  .menu-div  button:nth-of-type(1) {
+    border: none;
+    height: 40px;
+    width: 70px;
+    border-radius: 30px;
+    color: #482AFF;
+    font-family: "Calibri Light";
+    font-size: large;
+    margin: 5px;
+  }
+
+  .responsive-navigation ul{
+    display: block;
+    margin: 80px auto auto 50px;
+    padding-left: 0px;
+  }
+
+  hr{
+    color: white;
+    width: 90%;
+    margin: auto;
+  }
+
+}
+
+@media(max-width:500px){
+  .navigation-div-second 
+  .menu-div
+  .icon{
+    width: 20%;
+  }
+}
+
+@media(max-width:400px){
+  .navigation-div-second 
+  .menu-div
+  .icon{
+    width: 25%;
   }
 }
 
@@ -216,7 +360,7 @@
   }
 }
 
-.metatesk-title svg{
+.metatesk-title-svg{
   width: 10%;
   margin: 30px;
 }
@@ -1057,10 +1201,10 @@ p:nth-of-type(2) {
   font-family: 'Roboto',sans-serif;
   font-size: 15px;
   position: relative;
-  margin: 10px auto 10px auto;
+  margin: 0px auto 0px auto;
   border: 2px solid #482AFF;
   border-radius: 20px;
-  width: 70% !important;
+  width: 90% !important;
 }
 
 .react-tel-input .form-control {
@@ -1346,7 +1490,43 @@ form {
   border-radius: 30px;
 }
 
+.metattesk-contact 
+form 
+.WhatsApp-div{
+  display: flex;
+  align-items: center;
+  width: 70%;
+  margin: 10px auto;
+}
 
+.metattesk-contact 
+form 
+.WhatsApp-div 
+.WhatsApp {
+  width: 25px;
+  height: 25px;
+  margin: 5px 10px 10px;
+}
+
+.metattesk-contact 
+form 
+.date-div{
+  width: 70%;
+  display: flex;
+}
+
+.metattesk-contact 
+form 
+.date-div
+input{
+  width: 48%;
+}
+
+
+.metattesk-contact 
+.WhatsApp svg {
+  fill: #482AFF;
+}
 
 .metattesk-contact form div p{
   margin-block-start: 0em;
