--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -126,6 +126,12 @@
   height: auto;
 }
 
+@media(max-width:568px){
+  .navigation-div-first > a{
+    width: 30px;
+  }
+}
+
 .metatesk-image{
   width: 15%;
   margin: auto auto auto 40px;
@@ -146,15 +152,14 @@
 
 @media(max-width:567px){
   .metatesk-image{
-    width: 28%;
+    width: 25%;
     margin: auto auto auto 10%;
   }
 }
 
-@media(max-width:400px){
+@media(max-width:500px){
   .metatesk-image{
-    width: 40%;
-    /* margin: auto auto auto 20px; */
+    width: 30%;
   }
 }
 
@@ -163,7 +168,7 @@
   top: 0px;
   right: 0%;
   width: 50%;
-  height: 100vh;
+  height: 95vh;
   background-color: #482AFF;
 }
 
@@ -220,7 +225,6 @@
     position: fixed;
     bottom: 0px;
     right: 0px;
-    border: 1px solid;
     background-color: #482AFF;
     height: 70px;
     width: 100%;
@@ -233,6 +237,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    padding: 0px 10px;
   }
 
   .navigation-div-second 
@@ -268,7 +273,7 @@
   .menu-div
   .icon a{
     color: white !important;
-    font-size: larger;
+    font-size: large;
     text-decoration: none;
     height: auto;
     width: auto;
@@ -282,14 +287,14 @@
     width: 70px;
     border-radius: 30px;
     color: #482AFF;
-    font-family: "Calibri Light";
-    font-size: large;
+    font-family: "Nunito";
+    font-size: larger;
     margin: 5px;
   }
 
   .responsive-navigation ul{
     display: block;
-    margin: 80px auto auto 50px;
+    margin: 20px auto auto 10px;
     padding-left: 0px;
   }
 
@@ -297,6 +302,11 @@
     color: white;
     width: 90%;
     margin: auto;
+  }
+
+  .responsive-navigation 
+  ul:nth-of-type(1) li:nth-of-type(1) a span {
+    margin: 0px 0px 0px 10px;
   }
 
 }
@@ -307,6 +317,15 @@
   .icon{
     width: 20%;
   }
+
+  .general-section ul li a{
+    font-size: 1rem;
+  }
+
+  .responsive-navigation 
+  ul:nth-of-type(1) li:nth-of-type(1) a span {
+    margin: 0px 0px 0px 2px;
+  }
 }
 
 @media(max-width:400px){
@@ -314,6 +333,10 @@
   .menu-div
   .icon{
     width: 25%;
+  }
+
+  .general-section ul li a{
+    font-size: 0.80rem;
   }
 }
 
