--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -592,17 +592,27 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   position: absolute;
   left: 0px;
-  height: 500px;
+  height: 700px;
   width: 600px;
   z-index: 10;
 }
 
 .metatesk-section
 .section-one
-.text-container p{
-  line-height: 45px;
+.text-container
+.img-container{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.metatesk-section
+.section-one
+.text-container
+.img-container img{
+  width: 20%;
 }
 
 .metatesk-section
@@ -624,26 +634,10 @@
 .metatesk-section
 .section-one .text-container  p:nth-of-type(2){
   font-family: "Nunito";
-  font-size: 45px;
-  font-weight:800;
-}
-
-.metatesk-section
-.section-one .text-container  p:nth-of-type(3){
-  font-family: "Calibri light";
-  font-size: 30px;
-  font-weight:800;
-}
-
-
-.metatesk-section
-.section-one .text-container  p:nth-of-type(4){
-  font-family: "Nunito";
-  font-size: 45px;
+  font-size: 20px;
   font-weight:800;
   line-height: 50px;
 }
-
 
 @media(max-width:1199px){
   .metatesk-section
@@ -655,22 +649,6 @@
   .metatesk-section
   .section-one .text-container  p:nth-of-type(1){
     font-size: 20px;
-    line-height: 30px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(2){
-    font-size: 35px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(3){
-    font-size: 20px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(4){
-    font-size: 35px;
     line-height: 30px;
   }
 }
@@ -688,21 +666,6 @@
     line-height: 30px;
   }
   
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(2){
-    font-size: 30px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(3){
-    font-size: 20px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(4){
-    font-size: 30px;
-    line-height: 30px;
-  }
 }
 
 @media(max-width:768px){
@@ -712,28 +675,6 @@
     top: 0px;
     width: 300px;
     height: 300px;
-  }
-
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(1){
-    font-size: 20px;
-    line-height: 30px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(2){
-    font-size: 25px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(3){
-    font-size: 20px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(4){
-    font-size: 25px;
-    line-height: 30px;
   }
 }
 
@@ -752,24 +693,6 @@
     font-weight: 900;
   }
   
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(2){
-    font-size: 20px;
-    font-weight: 900;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(3){
-    font-size: 20px;
-    font-weight: 900;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(4){
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 900;
-  }
 }
 
 @media(max-width:500px){
@@ -787,31 +710,11 @@
     line-height: 20px;
     font-weight: 900;
   }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(2){
-    font-size: 15px;
-    font-weight: 900;
-    line-height: 20px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(3){
-    font-size: 15px;
-    font-weight: 900;
-    line-height: 20px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(4){
-    font-size: 15px;
-    line-height: 20px;
-    font-weight: 900;
-  }
 }
 
 @media(max-width:480px){
-  .metatesk-section .section-one .text-container{
+  .metatesk-section .section-one 
+  .text-container{
     top: 0px;
   }
 }
@@ -833,26 +736,6 @@
     font-weight: 700;
   }
   
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(2){
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 20px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(3){
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 20px;
-  }
-  
-  .metatesk-section
-  .section-one .text-container  p:nth-of-type(4){
-    font-size: 15px;
-    line-height: 20px;
-    font-weight: 700;
-  }
 }
 
 .metatesk-section
