--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -592,20 +592,38 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
   position: absolute;
   left: 0px;
-  height: 700px;
+  height: 600px;
   width: 600px;
   z-index: 10;
 }
 
 .metatesk-section
 .section-one
+.text-container > div{
+  width: 80%;
+}
+
+
+.metatesk-section
+.section-one
 .text-container
 .img-container{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  width: 70%;
+}
+
+.metatesk-section
+.section-one
+.text-container > div button{
+  border: none;
+  padding: 9px 16px;
+  border-radius: 30px;
+  background-color: #482AFF;
+  color: #fff;
+  font-family: "Nunito";
 }
 
 .metatesk-section
@@ -625,19 +643,20 @@
 
 .metatesk-section
 .section-one .text-container  p:nth-of-type(1){
-  font-family: "Calibri light";
+  font-family: "Nunito";
   font-size: 30px;
-  font-weight:800;
-  line-height: 50px;
+  font-weight: 800;
+  margin:10px auto ;
 }
 
 .metatesk-section
 .section-one .text-container  p:nth-of-type(2){
-  font-family: "Nunito";
-  font-size: 20px;
+  font-family: "Calibri light";
+  font-size: 25px;
   font-weight:800;
-  line-height: 50px;
+  margin:10px auto;
 }
+
 
 @media(max-width:1199px){
   .metatesk-section
