--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -611,7 +611,7 @@
 .text-container
 .img-container{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 70%;
 }
 
@@ -635,7 +635,7 @@
 
 .metatesk-section
 .section-one p{
-  color: #482AFF;
+  color: black;
   margin-block-start: 0em;
   margin-block-end: 0em;
 }
@@ -644,17 +644,19 @@
 .metatesk-section
 .section-one .text-container  p:nth-of-type(1){
   font-family: "Nunito";
-  font-size: 30px;
-  font-weight: 800;
-  margin:10px auto ;
+  font-size: 5rem;
+  font-weight: 900;
+  margin: auto auto 30px 5px ;
+  line-height: 1;
 }
 
 .metatesk-section
 .section-one .text-container  p:nth-of-type(2){
   font-family: "Calibri light";
-  font-size: 25px;
+  font-size: 1.5rem;
   font-weight:800;
-  margin:10px auto;
+  margin: auto auto 30px 10px ;
+  line-height: 1.2;
 }
 
 
