--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -502,6 +502,10 @@
 .section-one{
   position: relative;
   overflow: hidden;
+  background-image: url('./metaImg/Group 2.png');
+  background-position: center;
+  background-size: contain;
+  height: 600px;
 }
 
 
