--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -506,8 +506,10 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 75vh;
+  height: 650px;
 }
+
+
 
 
 .metatesk-section
