--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -510,8 +510,6 @@
 }
 
 
-
-
 .metatesk-section
 .section-one > p{
   color: white !important;
@@ -775,25 +773,72 @@
 .metatesk-section
 .section-one
 .slick-dots li button:before {
-  color: #482AFF !important;
+  color: hsl(248, 100%, 58%) !important;
 }
 
 
-/* section Two */
+
+.section-three
+.center-container{
+  height: 200px;
+  width: 60%;
+  margin: auto;
+  border-radius: 20px;
+  display: flex;
+  background-color: #e6e4fa;
+}
+
+.section-three
+.center-container 
+.left{
+  width: 35%;
+  height: 100%;
+}
 
 
-.section-three{
+.section-three
+.center-container 
+.right{
+  padding: 20px;
+}
+
+.section-three
+.center-container 
+.right
+p:nth-of-type(1) {
+  color: black;
+  font-size: 1.3rem;
+  font-weight: 900;
+  font-family: 'Nunito';
+}
+
+.section-three
+.center-container 
+.right
+p:nth-of-type(2) {
+  color: black;
+  font-size: 1.1rem;
+  font-weight: 900;
+  font-family: 'Calibri light';
+}
+
+.section-three
+.center-container 
+.right button{
+  border: none;
+  padding: 10px 18px;
   background-color: #482AFF;
-  padding: 20px 0px;
+  border-radius: 20px;
+  color: white;
 }
 
-@media(max-width:768px){
+/* @media(max-width:768px){
   .section-three{
     height: auto;
   }
-}
+} */
 
-.metatesk-box{
+/* .metatesk-box{
   width: 100%;
   height: 400px;
   display: flex;
@@ -835,9 +880,9 @@
 .metatesk-box .img-div img{
   width: 50%;
   height: auto;
-}
+} */
 
-/* secton three */
+
 
 .list {
   position: relative;
@@ -1638,7 +1683,7 @@ input{
   height: 0;
   position: absolute;
   left: 30%;
-  top: 1%;
+  top: 5%;
   transform: translate(-50%, -50%);
 }
 
@@ -1667,7 +1712,7 @@ input{
   height: 0;
   position: absolute;
   left: 30%;
-  top: 1%;
+  top: 5%;
   transform: translate(-50%, -50%);
 }
 
