--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -824,7 +824,7 @@ p:nth-of-type(2) {
   width: 50%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
