--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -826,13 +826,45 @@ p:nth-of-type(2) {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  position: relative;
 }
 
 .metatesk-section
 .section-one
-.img-container img{
+.img-container img:nth-child(1) {
   width: 90%;
   height: auto;
+}
+
+.metatesk-section
+.section-one
+.img-container img:nth-child(2) {
+  width: 15%;
+  position: absolute;
+  left: 20%;
+  transform: translateX(-50%);
+  top: 8%;
+}
+
+
+.metatesk-section
+.section-one
+.img-container img:nth-child(3) {
+  width: 15%;
+  position: absolute;
+  right:  15%;
+  transform: translateX(-50%);
+  bottom: 5%;
+}
+
+.metatesk-section
+.section-one
+.img-container img:nth-child(4) {
+  width: 15%;
+  position: absolute;
+  right:  5%;
+  transform: translateX(-50%);
+  top: 25%;
 }
 
 /* @media(max-width:768px){
