--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -1088,104 +1088,50 @@ p:nth-of-type(2) {
 
 /* section four */
 
-
-
-.section-four
-.text-box{
-  text-align: center;
-  margin: 40px 0px;
-}
-
-.section-four
-.text-box h3{
-  font-size: 30px;
-  color: #482aff;
-  font-family: "Calibri light";
-}
-
-.section-four
-.img-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.section-four{
   margin: 50px auto;
 }
 
 .section-four
-.text-box h3 span:nth-of-type(1){
-  font-size: 75px;
-  font-family: "Nunito";
-  font-weight: 700;
-  line-height: 95px;
+.text-container{
+  text-align: center;
+  margin-bottom: 30px;
 }
+
 
 .section-four
-.text-box h3 span:nth-of-type(3){
-  font-size: 45px;
-  font-family: "Nunito";
-  font-weight: 700;
-}
-
-@media(max-width:567px){
-  .section-four
-  .text-box h3{
-    font-size: 25px;
-  }
-  .section-four
-  .text-box h3 span:nth-of-type(1){
-    font-size: 65px;
-  }
-
-  .section-four
-  .text-box h3 span:nth-of-type(3){
-    font-size: 25px;
-  }
-}
-
-@media(max-width:400px){
-  .section-four
-  .text-box h3{
-    font-size: 25px;
-  }
-  .section-four
-  .text-box h3 span:nth-of-type(1){
-    font-size: 45px;
-    font-weight: 700;
-    line-height: 100px;
-  }
-
-  .section-four
-  .text-box h3 span:nth-of-type(3){
-    font-size: 25px;
-    font-weight: 700;
-  }
-}
-
-.section-four
-.img-box p{
-  font-size: 30px;
-  font-family: "Nunito";
-  font-weight: 700; 
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  font-family: "Nunito";
+.text-container h4{
   color: #482AFF;
-  border: 5px solid;
-  border-radius: 100px;
-  padding: 7px 18px;
+  font-family: "Nunito";
+  font-weight: 700;
+}
+
+.section-four
+.box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0 10px;
 }
 
 
 .section-four
-.img-box img{
-  width: 100%;
-  height: auto;
-  border-radius: 20px;
-  border: 5px solid #FBB116;
-  margin: 50px auto auto auto;
+.box p:nth-of-type(1){
+  color: #482AFF;
+  font-family: "Nunito";
+  font-weight: 700;
+  font-size: 25px;
 }
 
+.section-four
+.box p:nth-of-type(2){
+  font-family: "Calibri light";
+  font-weight: 600;
+  font-size: 20px;
+  width: 80%;
+}
 
 
 /* form section  */
